unpackaged/main/default/objects/pse__Project_Task__c/fields/Actual_Hours_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_Migrated__c</fullName>
    <description>Actual Hours from Data Migration</description>
    <label>Actual Hours (Migrated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>