unpackaged/main/default/objects/pse__Project_Task__c/fields/Assignment_Created__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by FLOW when PTA is updated with Assignment.</description>
    <label>Assignment Created</label>
    <type>Checkbox</type>
</CustomField>