unpackaged/main/default/objects/pse__Project_Task__c/fields/CLZ_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>CLZ_Internal_Id__c</fullName>
    <description>Unique CLZ Internal ID used for data migration.</description>
    <externalId>true</externalId>
    <label>CLZ Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>