unpackaged/main/default/objects/pse__Project_Task__c/fields/CTC_Jira_Assignee__c.field-meta.xml
<CustomField>
    <fullName>CTC_Jira_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignee in Jira</description>
    <label>Jira Assignee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>