unpackaged/main/default/objects/pse__Project_Task__c/fields/CTC_Training_Code__c.field-meta.xml
<CustomField>
    <fullName>CTC_Training_Code__c</fullName>
    <description>Field to store FWE training codes required by French regulations</description>
    <inlineHelpText>Field to store FWE training codes required by French regulations</inlineHelpText>
    <label>Training Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>