unpackaged/main/default/objects/pse__Project_Task__c/fields/Exclude_from_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Utilization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated from Education tasks to exclude them from utilization.</description>
    <inlineHelpText>This exclues all timecards linked to the task from utilization. This can only updated if the task type is Education.</inlineHelpText>
    <label>Exclude from Utilization</label>
    <type>Checkbox</type>
</CustomField>