unpackaged/main/default/objects/pse__Project_Task__c/fields/Hours_Validation__c.field-meta.xml
<CustomField>
    <fullName>Hours_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours Validation</label>
    <type>Checkbox</type>
</CustomField>