unpackaged/main/default/objects/pse__Project_Task__c/fields/Late_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Late_Project_Task__c</fullName>
    <formula>pse__End_Date__c &lt; TODAY()</formula>
    <label>Late Project Task</label>
    <type>Checkbox</type>
</CustomField>