unpackaged/main/default/objects/pse__Project_Task__c/fields/MyGroup__c.field-meta.xml
<CustomField>
    <fullName>MyGroup__c</fullName>
    <formula>CONTAINS( pse__Project__r.pse__Group__r.pse__Group_ID_Chain__c, $User.PSA_Group_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyGroup</label>
    <type>Checkbox</type>
</CustomField>