unpackaged/main/default/objects/pse__Project_Task__c/fields/Number_of_Resource_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resource_Requests__c</fullName>
    <description>Rollup from DLRS.</description>
    <label>Number of Resource Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>