unpackaged/main/default/objects/pse__Project_Task__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Order ID from ERP. Used by Integration.</description>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>