unpackaged/main/default/objects/pse__Project_Task__c/fields/Original_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Original_Estimated_Hours__c</fullName>
    <label>Original Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>