unpackaged/main/default/objects/pse__Project_Task__c/fields/Project_Region__c.field-meta.xml
<CustomField>
    <fullName>Project_Region__c</fullName>
    <description>Region of the Project</description>
    <formula>pse__Project__r.pse__Region__r.Name</formula>
    <label>Project Region</label>
    <type>Text</type>
</CustomField>