unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Hours__c</fullName>
    <inlineHelpText>Hours spent on this task. Rolls up from task time entries on timecards that match statuses defined by your administrator. On parent tasks, this includes hours from child tasks.</inlineHelpText>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>