unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Assigned_Resources__c.field-meta.xml
<CustomField>
    <fullName>pse__Assigned_Resources__c</fullName>
    <inlineHelpText>System generated list of assigned resources. The list is generated from Project Task Assignment.</inlineHelpText>
    <label>Assigned Resources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>