unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Estimated_Time_To_Completion__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Time_To_Completion__c</fullName>
    <inlineHelpText>Specifies the estimated hours to complete the task.</inlineHelpText>
    <label>Estimated Time To Completion (Task)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>