unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>pse__Hours_Remaining__c</fullName>
    <formula>IF (
			ISBLANK(pse__Estimated_Time_To_Completion__c),
			IF (pse__Estimated_Hours__c - pse__Actual_Hours__c &lt; 0,
				 0, /* Never allow this field to go below 0 */
				 pse__Estimated_Hours__c - pse__Actual_Hours__c
			),
			pse__Estimated_Time_To_Completion__c
		)</formula>
    <inlineHelpText>The number of hours remaining to complete the task derived from Estimated Time to Completion (Task) when set. Calculated otherwise from estimated hours minus actual hours.</inlineHelpText>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>