unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup captures Task hierarchies:  sub-Tasks have a Parent Task lookup value for the next higher-level Task in the Task hierarchy.  Note that this is separate and distinct from temporal (dependent/predecessor) relationships between Tasks.</description>
    <inlineHelpText>This lookup captures Task hierarchies:  sub-Tasks have a Parent Task lookup value for the next higher-level Task in the Task hierarchy.  Note that this is separate and distinct from temporal (dependent/predecessor) relationships between Tasks.</inlineHelpText>
    <label>Parent Task</label>
    <referenceTo>pse__Project_Task__c</referenceTo>
    <relationshipLabel>Project Tasks (Child Task)</relationshipLabel>
    <relationshipName>Immediate_Sub_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>