unpackaged/main/default/objects/pse__Project_Task__c/fields/pse__Timecard_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Actual_Hours__c</fullName>
    <inlineHelpText>The actual time completed against timecards for a project task, where the timecards match statuses defined by your administrator.</inlineHelpText>
    <label>Timecard Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>