unpackaged/main/default/objects/pse__Project_Task__c/fields/RAG__c.field-meta.xml
<CustomField>
    <fullName>RAG__c</fullName>
    <formula>IF(RoleBudgetWarning__c &gt; 0 ,'🚩Check Role Budget!🚩',"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget RAG</label>
    <type>Text</type>
</CustomField>