unpackaged/main/default/objects/pse__Project_Task__c/fields/Request_Created__c.field-meta.xml
<CustomField>
    <fullName>Request_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populared by FLOW when a resource request is updated on a related PTA.</description>
    <label>Request Created</label>
    <type>Checkbox</type>
</CustomField>