unpackaged/main/default/objects/pse__Project_Task__c/fields/Role_Budget__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget__c</fullName>
    <inlineHelpText>Role Budget Reference</inlineHelpText>
    <label>Role Budget Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>