unpackaged/main/default/objects/pse__Project_Task__c/fields/Role_Budget_Link__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role Budget Link</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Role_Budget__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Role_Budget__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks_del</relationshipName>
    <type>Lookup</type>
</CustomField>