unpackaged/main/default/objects/pse__Project_Task__c/fields/RoleBudgetWarning__c.field-meta.xml
<CustomField>
    <fullName>RoleBudgetWarning__c</fullName>
    <description>Updates the Task to display a watning if there is a overage on a related Role Budget.</description>
    <label>RoleBudgetWarning</label>
    <summaryFilterItems>
        <field>pse__Project_Task_Assignment__c.RoleBudgetTaskEstimateMismatch__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>pse__Project_Task_Assignment__c.pse__Project_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>