unpackaged/main/default/objects/pse__Project_Task__c/fields/Service_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Type__c</fullName>
    <formula>TEXT(ffps_forterro__ServiceRequest__r.ffps_forterro__Type__c)</formula>
    <label>Service Request Type</label>
    <type>Text</type>
</CustomField>