unpackaged/main/default/objects/pse__Project_Task__c/fields/Sharepoint_Link__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Link__c</fullName>
    <inlineHelpText>External ink to sharepoint site or folder.</inlineHelpText>
    <label>Sharepoint Link</label>
    <type>Url</type>
</CustomField>