unpackaged/main/default/objects/pse__Project_Task__c/fields/Task_Location__c.field-meta.xml
<CustomField>
    <fullName>Task_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Off-site</fullName>
                <default>true</default>
                <label>Off-site</label>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>