unpackaged/main/default/objects/pse__Project_Task__c/fields/Task_Timeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Timeline_Status__c</fullName>
    <description>Project Task timeline planning and confirmation with Client</description>
    <label>Task Timeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Provisional Planned</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>