unpackaged/main/default/objects/pse__Project_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Contingent</fullName>
            </value>
            <value>
                <fullName>Product Bug</fullName>
            </value>
            <value>
                <fullName>Billable</fullName>
                <isActive>false</isActive>
                <label>Billable</label>
            </value>
            <value>
                <fullName>Free of Charge</fullName>
                <isActive>false</isActive>
                <label>Free of Charge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>