unpackaged/main/default/objects/pse__Project_Task__c/fields/Timecard_History__c.field-meta.xml
<CustomField>
    <fullName>Timecard_History__c</fullName>
    <label>Timecard History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>