unpackaged/main/default/objects/pse__Project_Task__c/validationRules/Cannot_Enter_Role_Budget_on_Summary_Task.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Enter_Role_Budget_on_Summary_Task</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
        Not(IsNull( Role_Budget__c) ),
        pse__Summary__c  = TRUE
    )</errorConditionFormula>
    <errorMessage>A Parent/Summary Task cannot have a Role Budget. Please remove the Role Budget reference.</errorMessage>
</ValidationRule>