unpackaged/main/default/objects/pse__Project_Task__c/validationRules/Exclude_from_Utilization.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclude_from_Utilization</fullName>
    <active>false</active>
    <description>Only tasks that are Education can be excluded from Education.</description>
    <errorConditionFormula>AND ( 
      Exclude_from_Utilization__c,        
 
      Not(ISPICKVAL( Task_Type__c, 'Education'))
    )</errorConditionFormula>
    <errorMessage>Task Type must be Education.</errorMessage>
</ValidationRule>