unpackaged/main/default/objects/pse__Project_Task__c/validationRules/Role_Budget_Invalid_on_Parent_Tasks.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Budget_Invalid_on_Parent_Tasks</fullName>
    <active>false</active>
    <errorConditionFormula>pse__Summary__c</errorConditionFormula>
    <errorMessage>Role Budget cannot be populated on Parent Tasks.</errorMessage>
</ValidationRule>