unpackaged/main/default/objects/pse__Project_Task__c/validationRules/Role_Budget_Requires_Assigned_Resources.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Budget_Requires_Assigned_Resources</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
      OR(
          pse__Number_of_Assignments__c &lt;=0,
          IsNUll(pse__Number_of_Assignments__c)
         ),
        
      Not(IsNull(Role_Budget__c ))
   )</errorConditionFormula>
    <errorMessage>You must Assign Resources to this task before entering the Role Budget reference</errorMessage>
</ValidationRule>