unpackaged/main/default/objects/pse__Project_Task__c/validationRules/Task_Closed_with_Remaining_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_Closed_with_Remaining_Hours</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
       pse__Hours_Remaining__c &gt; 0,
        IsPickVal(pse__Status__c,'Complete')
    )</errorConditionFormula>
    <errorMessage>A task cannot be closed with Hours remaining. Update the estimated hours so that there are 0 remaining hours.</errorMessage>
</ValidationRule>