unpackaged/main/default/objects/pse__Project_Task__c/validationRules/TE_User_cannot_Edit_Task_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>TE_User_cannot_Edit_Task_Information</fullName>
    <active>true</active>
    <description>Prevent TE user editing task details on proejcts that are non ongoing. Will allow PM users to do this.</description>
    <errorConditionFormula>AND (
      OR(
         IsChanged( pse__Estimated_Hours__c ),
         IsChanged(  pse__Start_Date_Time__c ),
         IsChanged(  pse__End_Date_Time__c )

        ),
      NOT($Permission.PM_Edit_Start_End_Dates ),
      NOT(ISPICKVAL( pse__Project__r.Project_Sub_Types__c , "IBS - Ongoing Work"))
             
     )</errorConditionFormula>
    <errorMessage>You cannot edit Project Task Details.</errorMessage>
</ValidationRule>