unpackaged/main/default/objects/pse__Project_Task__c/validationRules/Timecard_Hrs_Greater_than_Estimated_Hrs.validationRule-meta.xml
<ValidationRule>
    <fullName>Timecard_Hrs_Greater_than_Estimated_Hrs</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL( pse__Project__r.Project_Sub_Types__c , "IBS - Ongoing Work")),
    NOT(ISPICKVAL( pse__Project__r.pse__Project_Type__c, "Internal")),
    pse__Timecard_Actual_Hours__c &gt;  pse__Estimated_Hours__c
)</errorConditionFormula>
    <errorMessage>Timecard Hours are greater than Estimated Hours.</errorMessage>
</ValidationRule>