unpackaged/main/default/objects/pse__Project_Task__c/listViews/All_Service_Request_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Service_Request_Tasks</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Assigned_Resources__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Estimated_Hours__c</columns>
    <columns>pse__Actual_Hours__c</columns>
    <columns>pse__Hours_Remaining__c</columns>
    <columns>Sharepoint_Link_URL__c</columns>
    <columns>pse__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Request_Type__c</field>
        <operation>equals</operation>
        <value>FSP</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All FSP Tasks in Draft</label>
</ListView>