unpackaged/main/default/objects/pse__Project_Task__c/listViews/All_Service_Request_Tasks2.listView-meta.xml
<ListView>
    <fullName>All_Service_Request_Tasks2</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>ffps_forterro__ServiceRequest__c</columns>
    <columns>Service_Request_Type__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__WBS_Element_Number__c</columns>
    <columns>pse__Estimated_Hours__c</columns>
    <columns>pse__Hours_Remaining__c</columns>
    <columns>Sharepoint_Link_URL__c</columns>
    <columns>pse__Description__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Assigned_Resources__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ffps_forterro__ServiceRequest__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Service Request Tasks</label>
</ListView>