unpackaged/main/default/objects/pse__Project_Task__c/listViews/FSP_Tasks_no_Assignment.listView-meta.xml
<ListView>
    <fullName>FSP_Tasks_no_Assignment</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__WBS_Element_Number__c</columns>
    <columns>pse__Estimated_Hours__c</columns>
    <columns>pse__Hours_Remaining__c</columns>
    <columns>Sharepoint_Link_URL__c</columns>
    <columns>pse__Description__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Assigned_Resources__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Request_Type__c</field>
        <operation>equals</operation>
        <value>FSP</value>
    </filters>
    <filters>
        <field>Assignment_Created__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>FSP Tasks (No Assignment)</label>
</ListView>