unpackaged/main/default/objects/pse__Project_Task__c/listViews/JVS_All_FSP_Project_Tasks.listView-meta.xml
<ListView>
    <fullName>JVS_All_FSP_Project_Tasks</fullName>
    <columns>pse__Project__c</columns>
    <columns>NAME</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Assigned_Resources__c</columns>
    <columns>pse__Estimated_Hours__c</columns>
    <columns>pse__Hours_Remaining__c</columns>
    <columns>Role_Budget__c</columns>
    <columns>Role_Budget_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Request_Type__c</field>
        <operation>equals</operation>
        <value>FSP</value>
    </filters>
    <filters>
        <field>MyRegion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>JVS All FSP Project Tasks</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Services_Jeeves</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>